rust/src/bindings.rs

extern "C" { pub fn bitzpack256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxpack256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bits1pack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bits1pack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bits1unpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bits1unpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack8 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack8 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack8 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack8 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxunpack8 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxunpack16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxunpack32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxunpack64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfunpack8 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfunpack16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfunpack32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfunpack64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1unpack8 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1unpack16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1unpack32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1unpack64 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfunpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1unpack128v16 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_ushort , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1unpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfunpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1unpack128v32 (in_ : * const :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
